--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -23,6 +23,10 @@
     padding: 20px;    
     gap: 15px;
 }
+.form-elements {
+    display: flex;
+    flex-direction: column;
+}
 .header{
     display: flex;
     justify-content: center;
@@ -35,8 +39,8 @@ input[type='text'], input[type='email'], select, textarea{
     border-left: 0;
     border-right: 0;
     background-color: transparent;
-    width: 95%;
-    margin: 20px 0;
+    width: 90%;
+    margin: 15px 0;
     font-size: 14px;
     padding: 5px;
     opacity: .7;
