--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -49,10 +49,11 @@ input[type='text'], input[type='email'], select, textarea{
 
 input[type='button'] {
     border: none;
-    height: 30px;
+    height: 40px;
     width: 100%;
     border-radius: 20px;
     background-image: linear-gradient(to right, rgb(209, 3, 209), rgb(110, 1, 188), rgb(77, 77, 255));
+    color: aliceblue;
 }
 textarea {
     height: 100px;
