adjusted container height dimensions from vh vmax to accommodate screen rotation on mobile view

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-    height: 100vh;
+    height: 100vmax;
     width: 100%;
     background-image: linear-gradient(45deg, blue, indigo, purple);
     display: flex;
