--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,11 +5,11 @@
 }
 
 .container {
-    height: 100vmax;
+    height: 120vh;
     width: 100%;
     background-image: linear-gradient(45deg, blue, indigo, purple);
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
 }
 .formarea {
@@ -23,6 +23,7 @@
     justify-content: center;  
     padding: 20px;    
     gap: 15px;
+    margin-top: 50px;
 }
 .form-elements {
     display: flex;
